added a few points to the overview

--- a/DSSG-AWS-demo.ipynb
+++ b/DSSG-AWS-demo.ipynb
@@ -60,7 +60,10 @@
     "  - security groups\n",
     "  - logging in\n",
     "----\n",
-    "- awscli (https://aws.amazon.com/cli/)"
+    "- awscli (https://aws.amazon.com/cli/)\n",
+    "---\n",
+    "- Installing software (jupyter notebook)\n",
+    "- running the notebook and getting access from your local machine"
    ]
   },
   {
