Added a section about S3 access.

--- a/DSSG-AWS-demo.ipynb
+++ b/DSSG-AWS-demo.ipynb
@@ -48,9 +48,10 @@
     "   - EC2 (**this tutorial**)\n",
     "       - https://aws.amazon.com/ec2/instance-types/\n",
     "       - https://aws.amazon.com/ec2/pricing/on-demand/\n",
-    "   - S3\n",
+    "   - S3 (**this tutorial**)\n",
     "   - Elastic BeanStalk\n",
     "   - Lambda\n",
+    "   - AWS Elasttic Map Reduce (EMR)\n",
     "   - ...\n",
     "- Login to AWS management WEB UI\n",
     "---\n",
@@ -100,11 +101,43 @@
     "      - AWS regions\n",
     "      - AMIs\n",
     "  - security groups\n",
-    "  - logging in\n",
+    "  - logging in via ssh\n",
+    "  \n",
     "\n",
     "https://aws.amazon.com/getting-started/tutorials/launch-a-virtual-machine/\n",
     "\n",
-    "http://docs.aws.amazon.com/AWSEC2/latest/UserGuide/EC2_GetStarted.html?shortFooter=true"
+    "http://docs.aws.amazon.com/AWSEC2/latest/UserGuide/EC2_GetStarted.html?shortFooter=true\n",
+    "\n",
+    "## remember to change the `ssh key` permissions to `600`\n",
+    "\n",
+    "`chmod 600 ~/Downloads/keys.pem`"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Accessing S3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`aws s3 ls`\n",
+    "\n",
+    "`aws s3 cp s3://pydataberlin-dssg-datadive/ ./`\n",
+    "\n",
+    "### custom applications, for instance `dask`\n",
+    "\n",
+    "`curl http://169.254.169.254/latest/meta-data/iam/security-credentials/DSSG-datadive`"
    ]
   },
   {
