Made the notebook into slides

--- a/DSSG-AWS-demo.ipynb
+++ b/DSSG-AWS-demo.ipynb
@@ -2,7 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# PyData Berlin\n",
     "## Matti Lyra @mattilyra\n",
@@ -11,14 +15,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "----"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Conference\n",
     "\n",
@@ -33,14 +45,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "----"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# AWS\n",
     "\n",
@@ -69,9 +89,13 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "# Login to AWS\n",
+    "# Login to AWS console\n",
     "\n",
     "## For the purposes of this tutorial you won't be using your own AWS account (if you have one) \n",
     "## instead you'll be using the PyData account via a IAM user role\n",
@@ -83,14 +107,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "notes"
+    }
+   },
    "source": [
     "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# AWS Virtual Machines\n",
     "\n",
@@ -102,12 +134,36 @@
     "      - AMIs\n",
     "  - security groups\n",
     "  - logging in via ssh\n",
-    "  \n",
     "\n",
     "https://aws.amazon.com/getting-started/tutorials/launch-a-virtual-machine/\n",
     "\n",
-    "http://docs.aws.amazon.com/AWSEC2/latest/UserGuide/EC2_GetStarted.html?shortFooter=true\n",
-    "\n",
+    "http://docs.aws.amazon.com/AWSEC2/latest/UserGuide/EC2_GetStarted.html?shortFooter=true"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Select\n",
+    "## AMI\n",
+    "## Instance Type\n",
+    "## Configure IAM Role\n",
+    "## Storage\n",
+    "## Tags"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
     "## remember to change the `ssh key` permissions to `600`\n",
     "\n",
     "`chmod 600 ~/Downloads/keys.pem`"
@@ -115,22 +171,25 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
-    "# Accessing S3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "# Accessing S3\n",
+    "\n",
     "`aws s3 ls`\n",
     "\n",
     "`aws s3 cp s3://pydataberlin-dssg-datadive/ ./`\n",
@@ -142,14 +201,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# Running Stuff\n",
     "\n",
@@ -170,14 +237,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "----"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# create a conda environment\n",
     "\n",
@@ -192,14 +267,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# run a jupyter notebook and start working\n",
     "\n",
@@ -218,14 +301,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "skip"
+    }
+   },
    "source": [
     "---"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "# but what if I want to go home in the evening?\n",
     "\n",
@@ -238,6 +329,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -253,7 +345,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.0"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
