Added github link to slides.

--- a/DSSG-AWS-demo.ipynb
+++ b/DSSG-AWS-demo.ipynb
@@ -10,7 +10,9 @@
    "source": [
     "# PyData Berlin\n",
     "## Matti Lyra @mattilyra\n",
-    "## @pydataberlin"
+    "## @pydataberlin\n",
+    "\n",
+    "## https://github.com/mattilyra/dssg-aws-demo"
    ]
   },
   {
